# libscript

./: Makefile  README.md  libscript.css
doc/: JAVA_API_DUMP.txt  LUA_API_DUMP.txt  LUA_API_FULL_DUMP.txt  PERL_API_DUMP.txt  PYTHON_API_DUMP.txt  PYTHON_API_MAP.txt  RUBY_API_DUMP.txt  RUBY_API_MAP.txt  apresentacao.odp  apresentacao.sxi  comparacao.txt  dissert.bib  dissert.lyx  dissert_en.lyx  figura1.eps  figura1_en.eps  figura2.eps  figura2_en.eps  figura3.eps  figura3_en.eps  libscript.lyx  proposta.lyx  sblp2007.lyx
doc/ThesisPUC/Resources/: Environment
doc/ThesisPUC/Shared/lyx/layouts/: ThesisPUC.layout
doc/ThesisPUC/Shared/texmf-dist/tex/latex/ThesisPUC/: Exple.tex  Makefile  ThesisPUC.bst  ThesisPUC.tex
doc/code/: Makefile  javapoly.c  javatestjni.java  luafnmt.c  perleval.c  perlmini.c  pythonbuiltins.c  pythoncall.c  rubycall.c  rubygc.c  rubyintern.c
doc/code/perlxs/Teste/: Changes  Makefile.PL  README  Teste.xs  simpletest
doc/code/perlxs/Teste/t/: Teste.t
doc/formato-puc/: Makefile  ThesisPUC.cls  ThesisPUC_uk.bst  dissert-abstract.tex  dissert-agradecimentos.tex  dissert-epigrafe.tex  dissert-formato-puc.tex  dissert-lyxstuff.tex  dissert-resumo.tex  dissert-texto.tex  dissert.bib  figura1.eps  figura2.eps  figura3.eps  puc.ps  titlesec.sty
libscript/: AUTHORS  Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  ht.lo  libscript.la  libscript.lo  libtool  plugin.lo
libscript-lua/: Makefile  Makefile.am  Makefile.in  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  libscript-lua.la  libscript-lua.lo  libtool
libscript-lua/.deps/: libscript-lua.Plo
libscript-lua/.libs/: libscript-lua.la  libscript-lua.so.0.0.0
libscript-lua/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
libscript-lua/src/: libscript-lua.c  libscript-lua.h
libscript-perl/: Makefile.am  Makefile.in  aclocal.m4  autogen.sh  configure  configure.ac
libscript-perl/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
libscript-perl/m4/: ac_perl_devel.m4  checkbuild.m4  split.m4
libscript-perl/src/: libscript-perl.c  libscript-perl.h  libscript-perl.xs
libscript-py/: Makefile.am  configure.ac
libscript-py/src/: libscript-py.c  libscript-py.h
libscript-python/: Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.status  configure  configure.ac  libscript-python.la  libscript-python.lo  libtool
libscript-python/.deps/: libscript-python.Plo
libscript-python/.libs/: libscript-python.la  libscript-python.so.0.0.0
libscript-python/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
libscript-python/m4/: ac_python_devel.m4
libscript-python/src/: libscript-py.c  libscript-python.c  libscript-python.h
libscript-rb/: Makefile.am  configure.ac
libscript-rb/src/: libscript-rb.c  libscript-rb.h
libscript-ruby/: Makefile  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  libscript-ruby.la  libscript-ruby.lo  libtool
libscript-ruby/.deps/: libscript-ruby.Plo
libscript-ruby/.libs/: libscript-ruby.la  libscript-ruby.lai  libscript-ruby.so.0.0.0
libscript-ruby/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
libscript-ruby/m4/: ac_ruby_devel.m4
libscript-ruby/src/: libscript-rb.h  libscript-ruby.c  libscript-ruby.h
libscript.sourceforge.net/: api.html  downloads.html  index.html  languages.html
libscript/.deps/: data.Plo  ht.Plo  libscript.Plo  plugin.Plo
libscript/.libs/: libscript.la
libscript/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
libscript/src/: data.c  data.h  ht.c  ht.h  internals.h  libscript-plugin.h  libscript.c  libscript.h  plugin.c  plugin.h
tests/: test1.c  test1.lua  test1.pl  test1.py  test1.rb  test64.c  test64.lua  test64.pl  test64.py  test64.rb  test_perl_mul.c  testcall.c  testexc.c  testexc.lua  testexc.py  testexc.rb  testexcrun.c  testexcrun.pl  testmul.c  testmul.pl
tests_lang/: Makefile  javapoly.java  javatestjni.c  javatestjni.java  luacall.c  luauserdata.c  pythoncall.c  pythonconvert.c  pythonstring.c  pythontype.c  rubycall.c  rubygc.c
tests_lang/perlxs/Teste/: MANIFEST  ppport.h  simpletest
tests_lang/perlxs/Teste/lib/: Teste.pm
tests_lang/perlxs/Teste/t/: Teste.t
