
lib_LTLIBRARIES = libscript.la
include_HEADERS = src/libscript.h src/libscript-plugin.h

libscript_la_SOURCES = src/libscript.c src/libscript.h \
src/plugin.c src/plugin.h \
src/ht.c src/ht.h \
src/data.c src/data.h \
src/libscript-plugin.h \
src/internals.h


AM_CFLAGS = -ansi -Wall

libscript_la_LDFLAGS = -version-info 0:0:0
